# Satisfactodle

./: .gitignore  CMakeLists.txt  Parser.cpp  Parser.hpp  README.md  Recipe.hpp  RecipeParser.cpp  RecipeParser.hpp  main.cpp
